Fixed images gap

--- a/css/main.css
+++ b/css/main.css
@@ -87,7 +87,7 @@ h3 {
 #favorites {
   display: flex;
   justify-content: center;
-  gap: 58px;
+  /* gap: 58px; */
   margin-bottom: 50px;
 }
 
@@ -195,7 +195,6 @@ footer {
     drop-shadow(0 0 20px #32cd32);
   transform: scale(1.1) rotate(0deg);
 }
-
 
 /* Media query to ensure same behavior on small screens */
 @media (max-width: 600px) {
